projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice_Line_Item__c/QB_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Invoice line items for QB Invoice</description>
    <label>QB Invoice Line Item</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>