projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Line item description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>