projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice_Line_Item__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Related QB Invoice</description>
    <label>Invoice</label>
    <referenceTo>QB_Invoice__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>