projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Related Product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>QB Invoice Line Items</relationshipLabel>
    <relationshipName>QB_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>